# telega

./: CHANGELOG.md  LICENSE  README.md  stack.yaml  telega.cabal
Network/API/Telegram/: Bot.hs
Network/API/Telegram/Bot/: Core.hs  Field.hs  Identifier.hs  Object.hs  Property.hs  Utils.hs
Network/API/Telegram/Bot/Field/: Caption.hs  Duration.hs  Filesize.hs  Height.hs  Language.hs  MIME.hs  Name.hs  Title.hs  URI.hs  Width.hs
Network/API/Telegram/Bot/Identifier/: Chat.hs
Network/API/Telegram/Bot/Object/: Chat.hs  Group.hs  Language.hs  Member.hs  Name.hs  Sender.hs  Special.hs  Update.hs
Network/API/Telegram/Bot/Object/Chat/: Channel.hs  Conversation.hs  Group.hs
Network/API/Telegram/Bot/Object/Member/: Powers.hs  Restrictions.hs
Network/API/Telegram/Bot/Object/Special/: Language.hs  Name.hs
Network/API/Telegram/Bot/Object/Update/: Callback.hs  Message.hs  Moving.hs  Order.hs
Network/API/Telegram/Bot/Object/Update/Callback/: Notification.hs
Network/API/Telegram/Bot/Object/Update/Message/: Content.hs  Keyboard.hs  Origin.hs
Network/API/Telegram/Bot/Property/: Accessible.hs  Identifiable.hs  Persistable.hs
Network/Telegram/: API.hs
Network/Telegram/API/: Bot.hs
Network/Telegram/API/Bot/: Access.hs  Capacity.hs  Chat.hs  Core.hs  Deliverable.hs  Endpoint.hs  From.hs  Has.hs  Internal.hs  Keyboard.hs  Message.hs  Object.hs  Property.hs  Update.hs
Network/Telegram/API/Bot/Capacity/: Deliverable.hs  Droppable.hs  Editable.hs  Postable.hs  Purgeable.hs
Network/Telegram/API/Bot/Object/: Button.hs  Callback.hs  Chat.hs  Content.hs  From.hs  Keyboard.hs  Member.hs  Message.hs  Moving.hs  Notification.hs  Origin.hs  Sender.hs  Update.hs
Network/Telegram/API/Bot/Object/Callback/: Notification.hs
Network/Telegram/API/Bot/Object/Keyboard/: Button.hs
Network/Telegram/API/Bot/Object/Member/: Powers.hs  Restrictions.hs
Network/Telegram/API/Bot/Object/Message/: Content.hs  From.hs  Keyboard.hs  Origin.hs
Network/Telegram/API/Bot/Object/Update/: Callback.hs  Message.hs  Moving.hs
Network/Telegram/API/Bot/Property/: Accessible.hs  Identifiable.hs  Persistable.hs
(+41 files in other folders)
