name:                telega
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/telega
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/telega.git

library
  exposed-modules:
    Network.Telegram.API.Bot
    Network.Telegram.API.Bot.Chat
    Network.Telegram.API.Bot.From
    Network.Telegram.API.Bot.Keyboard
    Network.Telegram.API.Bot.Message
    Network.Telegram.API.Bot.Update
  build-depends: base == 4.*, transformers, aeson, text,
    warp, http-client, http-client-tls, servant, servant-client
  default-extensions: GeneralizedNewtypeDeriving, LambdaCase, OverloadedStrings, PackageImports, ScopedTypeVariables
  default-language: Haskell2010
  ghc-options: -fno-warn-tabs
